src/test/ui/tuple/index-invalid.stderr
error[E0609]: no field `1` on type `(((),),)`
  --> $DIR/index-invalid.rs:2:22
   |
LL |     let _ = (((),),).1.0;
   |                      ^

error[E0609]: no field `1` on type `((),)`
  --> $DIR/index-invalid.rs:4:24
   |
LL |     let _ = (((),),).0.1;
   |                        ^

error[E0609]: no field `000` on type `(((),),)`
  --> $DIR/index-invalid.rs:6:22
   |
LL |     let _ = (((),),).000.000;
   |                      ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0609`.
